// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "github.com/stratumn/go-node/cli/grpc/ext/ext.proto";

package stratumn.node.app.chat.grpc;

option go_package = "github.com/stratumn/go-node/app/chat/grpc;grpc";

// The chat service definition.
service Chat {
  // Sends a message to a peer.
  rpc Message (ChatMessage) returns (Ack) {
    option (stratumn.node.cli.ext.method_desc) = "Send a message to a peer";
  }

  // Gets the chat history with a peer.
  rpc GetHistory (HistoryReq) returns (stream DatedMessage) {
    option (stratumn.node.cli.ext.method_desc) = "Gets the chat history with a peer";
  }
}

// A chat message.
message ChatMessage {
  bytes peer_id = 1 [
    (stratumn.node.cli.ext.field_desc) = "Peer ID",
    (stratumn.node.cli.ext.field_required) = true,
    (stratumn.node.cli.ext.field_base58) = true
  ];
  string message = 2 [
    (stratumn.node.cli.ext.field_desc) = "Message content"
  ];
}

// An empty ack.
message Ack {
}

// The request message to get the chat history with a peer.
message HistoryReq {
  bytes peer_id = 1 [
    (stratumn.node.cli.ext.field_desc) = "Peer ID",
    (stratumn.node.cli.ext.field_required) = true,
    (stratumn.node.cli.ext.field_base58) = true
  ];
}

message DatedMessage {
  bytes from = 1 [
    (stratumn.node.cli.ext.field_desc) = "Message sender",
    (stratumn.node.cli.ext.field_base58) = true
  ];
  bytes to = 2 [
    (stratumn.node.cli.ext.field_desc) = "Message recipient",
    (stratumn.node.cli.ext.field_base58) = true
  ];
  string content = 3 [
    (stratumn.node.cli.ext.field_desc) = "Message content",
    (stratumn.node.cli.ext.field_required) = true
  ];
  google.protobuf.Timestamp time = 4 [
    (stratumn.node.cli.ext.field_desc) = "Message received time",
    (stratumn.node.cli.ext.field_required) = true
  ];
}


