// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-node/cli/grpc/ext/ext.proto";

package stratumn.node.app.storage;

option go_package = "github.com/stratumn/go-node/app/storage/pb;pb";


message FileChunk {
  // file name is required only on first message.
  string file_name = 1 [
    (stratumn.node.cli.ext.field_desc) = "Name of the file",
    (stratumn.node.cli.ext.field_required) = false
  ];
  bytes data = 2 [
    (stratumn.node.cli.ext.field_desc) = "Bytes of one file chunk",
    (stratumn.node.cli.ext.field_required) = true
  ];
}

message FileInfo {
  bytes hash = 1 [
    (stratumn.node.cli.ext.field_desc) = "Hash of the file",
    (stratumn.node.cli.ext.field_required) = true
  ];
}
